WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
71417
[Qt] [WK] Debug build broken
https://bugs.webkit.org/show_bug.cgi?id=71417
Summary
[Qt] [WK] Debug build broken
Viatcheslav Ostapenko
Reported
2011-11-02 16:25:00 PDT
BundlePage.o ../../../Source/WebKit2/WebProcess/qt/QtBuiltinBundlePage.cpp ../../../Source/WebKit2/WebProcess/qt/QtBuiltinBundlePage.cpp: In constructor ‘WebKit::QtBuiltinBundlePage::QtBuiltinBundlePage(WebKit::QtBuiltinBundle*, WKBundlePageRef)’: ../../../Source/WebKit2/WebProcess/qt/QtBuiltinBundlePage.cpp:70:5: error: missing initializer for member ‘WKBundlePageLoaderClient::didDetectXSSForFrame’ [-Werror=missing-field-initializers] ../../../Source/WebKit2/WebProcess/qt/QtBuiltinBundle.cpp: In member function ‘void WebKit::QtBuiltinBundle::handleSetNavigatorQtObjectEnabled(WKTypeRef)’: ../../../Source/WebKit2/WebProcess/qt/QtBuiltinBundle.cpp:134:5: error: ‘WKGetTypeId’ was not declared in this scope ../../../Source/WebKit2/WebProcess/qt/QtBuiltinBundle.cpp:139:5: error: ‘WKBooleanGetTypeID’ was not declared in this scope
Attachments
Another debug build fix.
(2.32 KB, patch)
2011-11-02 16:31 PDT
,
Viatcheslav Ostapenko
noam
: review+
noam
: commit-queue-
Details
Formatted Diff
Diff
Removed stupid tab from Changelog
(2.32 KB, patch)
2011-11-02 20:03 PDT
,
Viatcheslav Ostapenko
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Viatcheslav Ostapenko
Comment 1
2011-11-02 16:31:07 PDT
Created
attachment 113394
[details]
Another debug build fix.
WebKit Review Bot
Comment 2
2011-11-02 16:34:01 PDT
Attachment 113394
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebKit2/ChangeLog', u'Source/WebKit..." exit_code: 1 Source/WebKit2/ChangeLog:8: Line contains tab character. [whitespace/tab] [5] Total errors found: 1 in 3 files If any of these errors are false positives, please file a bug against check-webkit-style.
Noam Rosenthal
Comment 3
2011-11-02 17:28:32 PDT
Comment on
attachment 113394
[details]
Another debug build fix. Please fix style in changelog before committing.
Viatcheslav Ostapenko
Comment 4
2011-11-02 20:03:39 PDT
Created
attachment 113424
[details]
Removed stupid tab from Changelog
WebKit Review Bot
Comment 5
2011-11-02 23:33:15 PDT
Comment on
attachment 113424
[details]
Removed stupid tab from Changelog Clearing flags on attachment: 113424 Committed
r99141
: <
http://trac.webkit.org/changeset/99141
>
WebKit Review Bot
Comment 6
2011-11-02 23:33:20 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug