[Qt] [WK] Debug build broken https://bugs.webkit.org/show_bug.cgi?id=71417

Add WKNumber.h for WKBooleanGetTypeID
Replace WKGetTypeId with WKGetTypeID
Add initialization for didDetectXSSForFrame member in WKBundlePageLoaderClient
instance.

Patch by Viatcheslav Ostapenko <ostapenko.viatcheslav@nokia.com> on 2011-11-02
Reviewed by Noam Rosenthal.

* WebProcess/qt/QtBuiltinBundle.cpp:
(WebKit::QtBuiltinBundle::handleSetNavigatorQtObjectEnabled):
* WebProcess/qt/QtBuiltinBundlePage.cpp:
(WebKit::QtBuiltinBundlePage::QtBuiltinBundlePage):

Canonical link: https://commits.webkit.org/87732@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@99141 268f45cc-cd09-0410-ab3c-d52691b4dbfc